[gd_scene load_steps=38 format=3 uid="uid://h8pqs7tabdxj"]

[ext_resource type="Script" uid="uid://c2wkbu6y4kcu2" path="res://UI/ui_combat.gd" id="1_8flqu"]
[ext_resource type="Texture2D" uid="uid://c2cptlhr6pvg5" path="res://actions/actiontexture/axe.png" id="1_32lil"]
[ext_resource type="FontFile" uid="uid://dbsxp2y5aoq5q" path="res://carolingia.ttf" id="1_j6rr1"]
[ext_resource type="PackedScene" uid="uid://dxnw2d4wwdegc" path="res://vfx/atmosphere.tscn" id="2_8flqu"]
[ext_resource type="Texture2D" uid="uid://10mgmjx7fwya" path="res://Zun_bg.png" id="2_x8qlv"]
[ext_resource type="Texture2D" uid="uid://dn7lvslkn2b43" path="res://UI/fightUI.png" id="4_fs52m"]
[ext_resource type="Script" uid="uid://devdej4xpva2i" path="res://UI/camera_2d.gd" id="5_xibqh"]
[ext_resource type="Script" uid="uid://igdjgbcqg1d6" path="res://UI/PositionSlot.gd" id="6_j6rr1"]
[ext_resource type="Script" uid="uid://b3l4l88c3b65c" path="res://PositionData.gd" id="7_i1s1q"]
[ext_resource type="Script" uid="uid://bbfc4ul2bo0en" path="res://UI/actionButton.gd" id="7_roj6a"]
[ext_resource type="FontFile" uid="uid://dnslgqwusbs67" path="res://UI/Euphorigenic.otf" id="8_roj6a"]
[ext_resource type="PackedScene" uid="uid://dqnjuxw77ebnb" path="res://lvl/exploration1.tscn" id="10_vtu61"]
[ext_resource type="PackedScene" uid="uid://bybkgif0h2tv0" path="res://CombatManager.tscn" id="10_x8qlv"]
[ext_resource type="PackedScene" uid="uid://d3jx7ce6fpdr1" path="res://characters/CharacterTestEnemy1.tscn" id="12_ktp8g"]
[ext_resource type="PackedScene" uid="uid://jc1bbpflus0q" path="res://characters/CharacterTestEnemy4.tscn" id="12_roj6a"]
[ext_resource type="PackedScene" uid="uid://cr7722t3ktcl4" path="res://characters/CharacterTestEnemy2.tscn" id="13_euc7u"]
[ext_resource type="AudioStream" uid="uid://pyc1twsxl48d" path="res://actions/sound/Hammer1 (mp3cut.net).wav" id="13_s6b88"]
[ext_resource type="PackedScene" uid="uid://jg7klanpwhgj" path="res://characters/CharacterTestEnemy3.tscn" id="14_roj6a"]
[ext_resource type="Script" uid="uid://bqnn7n8kuofir" path="res://UI/buttonSkipCombat.gd" id="19_m2l43"]
[ext_resource type="Texture2D" uid="uid://ds2ccuqik2vml" path="res://UI/door_button_enter.png" id="19_vtu61"]
[ext_resource type="Script" uid="uid://d0dr3qg6ronr0" path="res://UI/image_action.gd" id="21_xtuat"]

[sub_resource type="Resource" id="Resource_i1s1q"]
script = ExtResource("7_i1s1q")
index = 0
scale = Vector2(1, 1)
is_enemy = false
isFront = false
metadata/_custom_type_script = "uid://b3l4l88c3b65c"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s6b88"]

[sub_resource type="Resource" id="Resource_8flqu"]
script = ExtResource("7_i1s1q")
index = 1
scale = Vector2(0.9, 0.9)
is_enemy = false
isFront = false
metadata/_custom_type_script = "uid://b3l4l88c3b65c"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hxbks"]

[sub_resource type="Resource" id="Resource_t7hjh"]
script = ExtResource("7_i1s1q")
index = 3
scale = Vector2(0.9, 0.9)
is_enemy = false
isFront = true
metadata/_custom_type_script = "uid://b3l4l88c3b65c"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m2l43"]

[sub_resource type="Resource" id="Resource_x8qlv"]
script = ExtResource("7_i1s1q")
index = 2
scale = Vector2(1, 1)
is_enemy = false
isFront = true
metadata/_custom_type_script = "uid://b3l4l88c3b65c"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vtu61"]

[sub_resource type="Resource" id="Resource_fs52m"]
script = ExtResource("7_i1s1q")
index = 0
scale = Vector2(1, 1)
is_enemy = true
isFront = true
metadata/_custom_type_script = "uid://b3l4l88c3b65c"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xtuat"]

[sub_resource type="Resource" id="Resource_ehgg6"]
script = ExtResource("7_i1s1q")
index = 1
scale = Vector2(0.9, 0.9)
is_enemy = true
isFront = true
metadata/_custom_type_script = "uid://b3l4l88c3b65c"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xwqlg"]

[sub_resource type="Resource" id="Resource_if0a6"]
script = ExtResource("7_i1s1q")
index = 2
scale = Vector2(1, 1)
is_enemy = true
isFront = false
metadata/_custom_type_script = "uid://b3l4l88c3b65c"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c7ruu"]

[sub_resource type="Resource" id="Resource_euc7u"]
script = ExtResource("7_i1s1q")
index = 3
scale = Vector2(0.9, 0.9)
is_enemy = true
isFront = false
metadata/_custom_type_script = "uid://b3l4l88c3b65c"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iaf2c"]

[node name="CombatInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8flqu")

[node name="ZunBg" type="Sprite2D" parent="."]
position = Vector2(961, 402)
texture = ExtResource("2_x8qlv")

[node name="atmosphere" parent="." instance=ExtResource("2_8flqu")]
position = Vector2(2, 352)

[node name="FightUi" type="Sprite2D" parent="."]
position = Vector2(960, 545)
texture = ExtResource("4_fs52m")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 681.0
offset_top = 974.0
offset_right = 1265.0
offset_bottom = 975.0
color = Color(0.501961, 0.407843, 0.207843, 1)

[node name="ActionPanel" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(90, 90)
layout_mode = 0
offset_left = 579.0
offset_top = 845.0
offset_right = 1202.0
offset_bottom = 945.0
scale = Vector2(1.245, 1.245)
theme_override_constants/separation = 10
alignment = 1

[node name="Action1" type="Button" parent="ActionPanel"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_fonts/font = ExtResource("1_j6rr1")
theme_override_font_sizes/font_size = 40
icon = ExtResource("1_32lil")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("7_roj6a")

[node name="cooldownA" type="Label" parent="ActionPanel/Action1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Action2" type="Button" parent="ActionPanel"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_fonts/font = ExtResource("1_j6rr1")
theme_override_font_sizes/font_size = 40
icon = ExtResource("1_32lil")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("7_roj6a")

[node name="cooldownA" type="Label" parent="ActionPanel/Action2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Action3" type="Button" parent="ActionPanel"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_fonts/font = ExtResource("1_j6rr1")
theme_override_font_sizes/font_size = 40
icon = ExtResource("1_32lil")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("7_roj6a")

[node name="cooldownA" type="Label" parent="ActionPanel/Action3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Action4" type="Button" parent="ActionPanel"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_fonts/font = ExtResource("1_j6rr1")
theme_override_font_sizes/font_size = 40
icon = ExtResource("1_32lil")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("7_roj6a")

[node name="cooldownA" type="Label" parent="ActionPanel/Action4"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Action5" type="Button" parent="ActionPanel"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_fonts/font = ExtResource("1_j6rr1")
theme_override_font_sizes/font_size = 40
icon = ExtResource("1_32lil")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("7_roj6a")

[node name="cooldownA" type="Label" parent="ActionPanel/Action5"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="LabelAction" type="Label" parent="."]
layout_mode = 0
offset_left = 681.0
offset_top = 982.0
offset_right = 1260.0
offset_bottom = 1066.0
theme_override_fonts/font = ExtResource("8_roj6a")
theme_override_font_sizes/font_size = 25
text = "Attaque1 
et truc et bidule"
horizontal_alignment = 1
autowrap_mode = 3

[node name="TurnOrderPanel" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 28.0
offset_right = 1921.0
offset_bottom = 93.0
mouse_filter = 2
alignment = 1

[node name="Charaname" type="Label" parent="."]
layout_mode = 0
offset_left = 204.0
offset_top = 821.0
offset_right = 848.0
offset_bottom = 901.0
theme_override_font_sizes/font_size = 40
text = "Hero Name"

[node name="contexte" type="Label" parent="."]
layout_mode = 0
offset_left = 1503.0
offset_top = 846.0
offset_right = 1813.0
offset_bottom = 1008.0
theme_override_font_sizes/font_size = 40
text = "ce qu'il se passe"
autowrap_mode = 3

[node name="CombatManager" parent="." instance=ExtResource("10_x8qlv")]
HERO_START_POS = Vector2(100, 500)
ENEMY_START_POS = Vector2(1200, 500)
exploration_scene = ExtResource("10_vtu61")
ENEMY_SCENES = [ExtResource("12_ktp8g"), ExtResource("12_ktp8g"), ExtResource("14_roj6a"), ExtResource("12_roj6a")]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="CombatManager"]
stream = ExtResource("13_s6b88")
volume_db = 4.455
pitch_scale = 0.67

[node name="charaPortrait" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 77.0
offset_top = 806.0
offset_right = 183.0
offset_bottom = 909.0

[node name="ResultScreen" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1000.0
theme_override_fonts/font = ExtResource("1_j6rr1")
theme_override_font_sizes/font_size = 450
text = "Victoire !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)
ignore_rotation = false
script = ExtResource("5_xibqh")

[node name="HeroPosition" type="Node2D" parent="."]
position = Vector2(151, 642)

[node name="position1" type="Node2D" parent="HeroPosition"]
position = Vector2(0, 28)
script = ExtResource("6_j6rr1")
position_data = SubResource("Resource_i1s1q")

[node name="TextureRect" type="TextureRect" parent="HeroPosition/position1"]
visible = false
offset_left = -47.0
offset_top = -334.0
offset_right = 19.0
offset_bottom = -274.0
mouse_filter = 2
texture = ExtResource("1_32lil")

[node name="Button" type="Button" parent="HeroPosition/position1"]
offset_left = -92.0
offset_top = -304.0
offset_right = 78.0
offset_bottom = 11.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_s6b88")
flat = true

[node name="position2" type="Node2D" parent="HeroPosition"]
position = Vector2(173, -13)
script = ExtResource("6_j6rr1")
position_data = SubResource("Resource_8flqu")

[node name="TextureRect" type="TextureRect" parent="HeroPosition/position2"]
visible = false
offset_left = -47.0
offset_top = -334.0
offset_right = 19.0
offset_bottom = -274.0
texture = ExtResource("1_32lil")

[node name="Button" type="Button" parent="HeroPosition/position2"]
offset_left = -92.0
offset_top = -304.0
offset_right = 78.0
offset_bottom = 11.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_hxbks")
flat = true

[node name="position4" type="Node2D" parent="HeroPosition"]
position = Vector2(537, -13)
script = ExtResource("6_j6rr1")
position_data = SubResource("Resource_t7hjh")

[node name="TextureRect" type="TextureRect" parent="HeroPosition/position4"]
visible = false
offset_left = -47.0
offset_top = -334.0
offset_right = 19.0
offset_bottom = -274.0
texture = ExtResource("1_32lil")

[node name="Button" type="Button" parent="HeroPosition/position4"]
offset_left = -92.0
offset_top = -304.0
offset_right = 78.0
offset_bottom = 11.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_m2l43")
flat = true

[node name="position3" type="Node2D" parent="HeroPosition"]
position = Vector2(355, 27)
script = ExtResource("6_j6rr1")
position_data = SubResource("Resource_x8qlv")

[node name="TextureRect" type="TextureRect" parent="HeroPosition/position3"]
visible = false
offset_left = -47.0
offset_top = -334.0
offset_right = 19.0
offset_bottom = -274.0
texture = ExtResource("1_32lil")

[node name="Button" type="Button" parent="HeroPosition/position3"]
offset_left = -92.0
offset_top = -304.0
offset_right = 78.0
offset_bottom = 11.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_vtu61")
flat = true

[node name="ennemiePosition" type="Node2D" parent="."]
position = Vector2(1259, 642)

[node name="position1" type="Node2D" parent="ennemiePosition"]
position = Vector2(0, 23)
script = ExtResource("6_j6rr1")
position_data = SubResource("Resource_fs52m")
enemy_scene = ExtResource("12_ktp8g")

[node name="TextureRect" type="TextureRect" parent="ennemiePosition/position1"]
visible = false
offset_left = -47.0
offset_top = -334.0
offset_right = 19.0
offset_bottom = -274.0
texture = ExtResource("1_32lil")

[node name="Button" type="Button" parent="ennemiePosition/position1"]
offset_left = -92.0
offset_top = -304.0
offset_right = 78.0
offset_bottom = 11.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_xtuat")
flat = true

[node name="position2" type="Node2D" parent="ennemiePosition"]
position = Vector2(169, -16)
script = ExtResource("6_j6rr1")
position_data = SubResource("Resource_ehgg6")
enemy_scene = ExtResource("13_euc7u")

[node name="TextureRect" type="TextureRect" parent="ennemiePosition/position2"]
visible = false
offset_left = -47.0
offset_top = -334.0
offset_right = 19.0
offset_bottom = -274.0
texture = ExtResource("1_32lil")

[node name="Button" type="Button" parent="ennemiePosition/position2"]
offset_left = -92.0
offset_top = -304.0
offset_right = 78.0
offset_bottom = 11.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_xwqlg")
flat = true

[node name="position3" type="Node2D" parent="ennemiePosition"]
position = Vector2(366, 23)
script = ExtResource("6_j6rr1")
position_data = SubResource("Resource_if0a6")
enemy_scene = ExtResource("14_roj6a")

[node name="TextureRect" type="TextureRect" parent="ennemiePosition/position3"]
visible = false
offset_left = -47.0
offset_top = -334.0
offset_right = 19.0
offset_bottom = -274.0
texture = ExtResource("1_32lil")

[node name="Button" type="Button" parent="ennemiePosition/position3"]
offset_left = -92.0
offset_top = -304.0
offset_right = 78.0
offset_bottom = 11.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_c7ruu")
flat = true

[node name="position4" type="Node2D" parent="ennemiePosition"]
position = Vector2(523, -10)
script = ExtResource("6_j6rr1")
position_data = SubResource("Resource_euc7u")

[node name="TextureRect" type="TextureRect" parent="ennemiePosition/position4"]
visible = false
offset_left = -47.0
offset_top = -334.0
offset_right = 19.0
offset_bottom = -274.0
texture = ExtResource("1_32lil")

[node name="Button" type="Button" parent="ennemiePosition/position4"]
offset_left = -92.0
offset_top = -304.0
offset_right = 78.0
offset_bottom = 11.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_iaf2c")
flat = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1560.0
offset_top = 23.0
offset_right = 1858.0
offset_bottom = 153.0
icon = ExtResource("19_vtu61")
script = ExtResource("19_m2l43")

[node name="ImageAction" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 740.0
offset_top = 158.0
offset_right = 1242.0
offset_bottom = 660.0
script = ExtResource("21_xtuat")

[connection signal="mouse_entered" from="ActionPanel/Action1" to="ActionPanel/Action1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ActionPanel/Action1" to="ActionPanel/Action1" method="_on_mouse_exited"]
[connection signal="pressed" from="ActionPanel/Action1" to="CombatManager" method="_on_action_1_pressed"]
[connection signal="mouse_entered" from="ActionPanel/Action2" to="ActionPanel/Action2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ActionPanel/Action2" to="ActionPanel/Action2" method="_on_mouse_exited"]
[connection signal="pressed" from="ActionPanel/Action2" to="CombatManager" method="_on_action_1_pressed"]
[connection signal="mouse_entered" from="ActionPanel/Action3" to="ActionPanel/Action3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ActionPanel/Action3" to="ActionPanel/Action3" method="_on_mouse_exited"]
[connection signal="pressed" from="ActionPanel/Action3" to="CombatManager" method="_on_action_1_pressed"]
[connection signal="mouse_entered" from="ActionPanel/Action4" to="ActionPanel/Action4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ActionPanel/Action4" to="ActionPanel/Action4" method="_on_mouse_exited"]
[connection signal="pressed" from="ActionPanel/Action4" to="CombatManager" method="_on_action_1_pressed"]
[connection signal="mouse_entered" from="ActionPanel/Action5" to="ActionPanel/Action5" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ActionPanel/Action5" to="ActionPanel/Action5" method="_on_mouse_exited"]
[connection signal="pressed" from="ActionPanel/Action5" to="CombatManager" method="_on_action_1_pressed"]
[connection signal="button_down" from="HeroPosition/position1/Button" to="HeroPosition/position1" method="_on_button_button_down"]
[connection signal="mouse_entered" from="HeroPosition/position1/Button" to="HeroPosition/position1" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="HeroPosition/position1/Button" to="HeroPosition/position1" method="_on_button_mouse_exited"]
[connection signal="button_down" from="HeroPosition/position2/Button" to="HeroPosition/position2" method="_on_button_button_down"]
[connection signal="mouse_entered" from="HeroPosition/position2/Button" to="HeroPosition/position2" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="HeroPosition/position2/Button" to="HeroPosition/position2" method="_on_button_mouse_exited"]
[connection signal="button_down" from="HeroPosition/position4/Button" to="HeroPosition/position4" method="_on_button_button_down"]
[connection signal="mouse_entered" from="HeroPosition/position4/Button" to="HeroPosition/position4" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="HeroPosition/position4/Button" to="HeroPosition/position4" method="_on_button_mouse_exited"]
[connection signal="button_down" from="HeroPosition/position3/Button" to="HeroPosition/position3" method="_on_button_button_down"]
[connection signal="mouse_entered" from="HeroPosition/position3/Button" to="HeroPosition/position3" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="HeroPosition/position3/Button" to="HeroPosition/position3" method="_on_button_mouse_exited"]
[connection signal="button_down" from="ennemiePosition/position1/Button" to="ennemiePosition/position1" method="_on_button_button_down"]
[connection signal="mouse_entered" from="ennemiePosition/position1/Button" to="ennemiePosition/position1" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="ennemiePosition/position1/Button" to="ennemiePosition/position1" method="_on_button_mouse_exited"]
[connection signal="button_down" from="ennemiePosition/position2/Button" to="ennemiePosition/position2" method="_on_button_button_down"]
[connection signal="mouse_entered" from="ennemiePosition/position2/Button" to="ennemiePosition/position2" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="ennemiePosition/position2/Button" to="ennemiePosition/position2" method="_on_button_mouse_exited"]
[connection signal="button_down" from="ennemiePosition/position3/Button" to="ennemiePosition/position3" method="_on_button_button_down"]
[connection signal="mouse_entered" from="ennemiePosition/position3/Button" to="ennemiePosition/position3" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="ennemiePosition/position3/Button" to="ennemiePosition/position3" method="_on_button_mouse_exited"]
[connection signal="button_down" from="ennemiePosition/position4/Button" to="ennemiePosition/position4" method="_on_button_button_down"]
[connection signal="mouse_entered" from="ennemiePosition/position4/Button" to="ennemiePosition/position4" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="ennemiePosition/position4/Button" to="ennemiePosition/position4" method="_on_button_mouse_exited"]
[connection signal="button_down" from="Button" to="Button" method="_on_button_down"]
